[gd_scene load_steps=14 format=2]

[ext_resource path="res://Base_tile_map.tres" type="TileSet" id=1]
[ext_resource path="res://Pacifico-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://music/Coldplay - Viva La Vida-[AudioTrimmer.com].ogg" type="AudioStream" id=3]
[ext_resource path="res://scripts/Final.gd" type="Script" id=4]
[ext_resource path="res://prefabs/transition_out.tscn" type="PackedScene" id=5]
[ext_resource path="res://prefabs/Sprite-0001.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.37069, 0.62931, 0.974138, 0.982759, 0.991379, 1 )
colors = PoolColorArray( 0.581349, 0.22709, 0.22709, 1, 0.819631, 0.128067, 0.128067, 1, 0.858824, 0.843137, 0.843137, 0, 0.899329, 0.51334, 0.51334, 1, 0.857382, 0.310565, 0.310565, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 1.6319, 0, 0, Vector2( 0.37406, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.449248, 0.670391 ), -2.37986, -2.37986, 0, 0, Vector2( 0.734962, 0.498612 ), -0.906612, -0.906612, 0, 0, Vector2( 1, 0.572232 ), -1.35054, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 98, 0 )
initial_velocity = 90.0
initial_velocity_random = 0.2
angular_velocity = 100.0
angular_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 20.0
angle_random = 0.2
scale = 1.6
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )
hue_variation = 0.8
hue_variation_random = 1.0

[sub_resource type="Animation" id=7]
resource_name = "submarine"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 4.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -178, 84 ), Vector2( 420, -24 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 4.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Final" type="Node2D"]
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 17, 0, 1, 17, 0, 2, 17, 0, 3, 17, 0, 4, 17, 0, 5, 17, 0, 6, 17, 0, 7, 17, 0, 8, 17, 0, 9, 17, 0, 10, 17, 0, 11, 17, 0, 12, 17, 0, 13, 17, 0, 14, 17, 0, 15, 17, 0, 16, 17, 0, 17, 17, 0, 18, 17, 0, 19, 17, 0, 65536, 17, 0, 65537, 17, 0, 65538, 1610612752, 0, 65539, 14, 0, 65540, 14, 0, 65541, 14, 0, 65542, 14, 0, 65543, 14, 0, 65544, 14, 0, 65545, 14, 0, 65546, 14, 0, 65547, 14, 0, 65548, 14, 0, 65549, 14, 0, 65550, 14, 0, 65551, 14, 0, 65552, 14, 0, 65553, 1610612754, 0, 65554, 17, 0, 65555, 17, 0, 131072, 17, 0, 131073, 17, 0, 131074, 1610612753, 0, 131075, 17, 0, 131076, 17, 0, 131077, 17, 0, 131078, 17, 0, 131079, 17, 0, 131080, 17, 0, 131081, 17, 0, 131082, 17, 0, 131083, 17, 0, 131084, 17, 0, 131085, 17, 0, 131086, 17, 0, 131087, 17, 0, 131088, 17, 0, 131089, 17, 0, 131090, 17, 0, 131091, 17, 0, 196608, 17, 0, 196609, 17, 0, 196610, 17, 0, 196611, 17, 0, 196612, 17, 0, 196613, 17, 0, 196614, 17, 0, 196615, 17, 0, 196616, 17, 0, 196617, 17, 0, 196618, 17, 0, 196619, 17, 0, 196620, 17, 0, 196621, 17, 0, 196622, 17, 0, 196623, 17, 0, 196624, 17, 0, 196625, 17, 0, 196626, 17, 0, 196627, 17, 0, 262144, 17, 0, 262145, 17, 0, 262146, 1610612752, 0, 262147, 17, 0, 262148, 17, 0, 262149, 17, 0, 262150, 17, 0, 262151, 17, 0, 262152, 17, 0, 262153, 17, 0, 262154, 17, 0, 262155, 17, 0, 262156, 17, 0, 262157, 17, 0, 262158, 17, 0, 262159, 17, 0, 262160, 1610612753, 0, 262161, 1610612754, 0, 262162, 17, 0, 262163, 17, 0, 327680, 17, 0, 327681, 17, 0, 327682, 1610612752, 0, 327683, 17, 0, 327684, 17, 0, 327685, 17, 0, 327686, 17, 0, 327687, 17, 0, 327688, 17, 0, 327689, 17, 0, 327690, 17, 0, 327691, 17, 0, 327692, 17, 0, 327693, 17, 0, 327694, 17, 0, 327695, 17, 0, 327696, 1610612753, 0, 327697, 1610612754, 0, 327698, 17, 0, 327699, 17, 0, 393216, 17, 0, 393217, 17, 0, 393218, 1610612752, 0, 393219, 17, 0, 393220, 17, 0, 393221, 17, 0, 393222, 17, 0, 393223, 17, 0, 393224, 17, 0, 393225, 17, 0, 393226, 17, 0, 393227, 17, 0, 393228, 17, 0, 393229, 17, 0, 393230, 17, 0, 393231, 17, 0, 393232, 17, 0, 393233, 1610612754, 0, 393234, 17, 0, 393235, 17, 0, 458752, 17, 0, 458753, 17, 0, 458754, 1610612752, 0, 458755, 17, 0, 458756, 17, 0, 458757, 17, 0, 458758, 17, 0, 458759, 17, 0, 458760, 17, 0, 458761, 17, 0, 458762, 17, 0, 458763, 17, 0, 458764, 17, 0, 458765, 17, 0, 458766, 17, 0, 458767, 17, 0, 458768, 17, 0, 458769, 1610612754, 0, 458770, 17, 0, 458771, 17, 0, 524288, 17, 0, 524289, 17, 0, 524290, 17, 0, 524291, 17, 0, 524292, 17, 0, 524293, 17, 0, 524294, 17, 0, 524295, 17, 0, 524296, 17, 0, 524297, 17, 0, 524298, 17, 0, 524299, 17, 0, 524300, 17, 0, 524301, 17, 0, 524302, 17, 0, 524303, 17, 0, 524304, 17, 0, 524305, 17, 0, 524306, 17, 0, 524307, 17, 0, 589824, 17, 0, 589825, 17, 0, 589826, 17, 0, 589827, 17, 0, 589828, 17, 0, 589829, 17, 0, 589830, 17, 0, 589831, 17, 0, 589832, 17, 0, 589833, 17, 0, 589834, 17, 0, 589835, 17, 0, 589836, 17, 0, 589837, 17, 0, 589838, 17, 0, 589839, 17, 0, 589840, 17, 0, 589841, 17, 0, 589842, 17, 0, 589843, 17, 0, 655360, 17, 0, 655361, 17, 0, 655362, 1610612752, 0, 655363, 20, 0, 655364, 20, 0, 655365, 20, 0, 655366, 20, 0, 655367, 20, 0, 655368, 20, 0, 655369, 20, 0, 655370, 20, 0, 655371, 20, 0, 655372, 20, 0, 655373, 20, 0, 655374, 20, 0, 655375, 20, 0, 655376, 20, 0, 655377, 1610612754, 0, 655378, 17, 0, 655379, 17, 0, 720896, 17, 0, 720897, 17, 0, 720898, 17, 0, 720899, 17, 0, 720900, 17, 0, 720901, 17, 0, 720902, 17, 0, 720903, 17, 0, 720904, 17, 0, 720905, 17, 0, 720906, 17, 0, 720907, 17, 0, 720908, 17, 0, 720909, 17, 0, 720910, 17, 0, 720911, 17, 0, 720912, 17, 0, 720913, 17, 0, 720914, 17, 0, 720915, 17, 0 )

[node name="win" type="Label" parent="."]
margin_left = 67.0151
margin_top = 84.9487
margin_right = 256.015
margin_bottom = 113.949
custom_fonts/font = SubResource( 1 )
text = "Parabéns, você venceu o jogo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music" type="AudioStreamPlayer" parent="."]
process_priority = 10
stream = ExtResource( 3 )
volume_db = -70.0
autoplay = true

[node name="transition_out" parent="." instance=ExtResource( 5 )]

[node name="confetti" type="Particles2D" parent="."]
position = Vector2( 164, 195.726 )
emitting = false
amount = 21
explosiveness = 0.6
randomness = 0.2
process_material = SubResource( 6 )

[node name="confetti2" type="Particles2D" parent="."]
position = Vector2( 270, 191.726 )
emitting = false
amount = 21
explosiveness = 0.6
randomness = 0.2
process_material = SubResource( 6 )

[node name="confetti3" type="Particles2D" parent="."]
position = Vector2( 32, 194.726 )
emitting = false
amount = 21
explosiveness = 0.6
randomness = 0.2
process_material = SubResource( 6 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/submarine = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -178, 84 )
rotation = -0.279253
texture = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0980392, 0.113725, 0.184314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="transition_fineshed" from="transition_out" to="." method="_on_transition_out_transition_fineshed"]
